--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h1 class="text-2xl md:text-3xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-slate-100 to-slate-400">
                     Moon & Lucky Calendar
                 </h1>
-                <p class="text-sm text-slate-400 mt-1">月と暦のガイド</p>
+                <p class="text-sm text-slate-400 mt-1">月の満ち欠けと吉日カレンダー</p>
             </div>
             <div class="flex items-center gap-4">
                 <button id="theme-toggle" class="p-2 rounded-full hover:bg-white/10 transition-colors">
@@ -125,3 +125,4 @@
     <script type="module" src="src/js/app.js"></script>
 </body>
 </html>
+
