--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moon & Lucky Day Calendar</title>
+    <title>月の満ち欠けと吉日カレンダー</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts: Inter & Noto Sans JP -->
@@ -125,4 +125,5 @@
     <script type="module" src="src/js/app.js"></script>
 </body>
 </html>
+
 
