--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>月の満ち欠けと吉日カレンダー</title>
+    <title>Moon & Lucky Day Calendar</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts: Inter & Noto Sans JP -->
@@ -64,9 +64,9 @@
         <header class="flex justify-between items-center mb-8">
             <div>
                 <h1 class="text-2xl md:text-3xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-slate-100 to-slate-400">
-                    月の満ち欠けと吉日カレンダー
+                    Moon & Lucky Calendar
                 </h1>
-                <p class="text-sm text-slate-400 mt-1">Moon & Lucky Calendar</p>
+                <p class="text-sm text-slate-400 mt-1">月と暦のガイド</p>
             </div>
             <div class="flex items-center gap-4">
                 <button id="theme-toggle" class="p-2 rounded-full hover:bg-white/10 transition-colors">
@@ -125,6 +125,3 @@
     <script type="module" src="src/js/app.js"></script>
 </body>
 </html>
-
-
-
