--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <script src="https://cdn.jsdelivr.net/npm/astronomy-engine@2.1.19/astronomy.browser.js"></script>
 
     <!-- App Logic -->
-    <script type="module" src="src/js/app.js"></script>
+    <script type="module" src="src/js/app.js?v=2"></script>
 </body>
 
 </html>
